fixed console on mobile

--- a/src/components/Console/Console.css
+++ b/src/components/Console/Console.css
@@ -19,3 +19,6 @@
     color: var(--text);
     background: var(--border);
 }
+.console pre {
+    overflow-x: auto;
+}
